Create a beta main frame for user signup, add footer

--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -2,13 +2,11 @@
 
 <div class="center hero-unit">
 
-  <h1>Hello Friends</h1>
+  <h1>Hello Folks!</h1>
 
   <h2>
-    This is the home page for the
-    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
+   Let's build the great company together!
   </h2>
-  <%= link_to "Sign Up", '#', class: "btn btn-large btn-primary" %>
+  <%= link_to "Join Us", signup_path, class: "btn btn-large btn-primary" %>
 
 </div>
