--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,9 @@
           <%= link_to "Beta Succeed America", root_path , id: "logo" %>
           <nav>
             <ul class="nav pull-right">
-              <li><%= link_to "Home",    root_path %></li>
+              <li><%= link_to "Home",     root_path %></li>
               <li><%= link_to "About",    about_path %></li>
-              <li><%= link_to "Contact", contact_path %></li>
+              <li><%= link_to "Sign in",  signin_path %></li>
             </ul>
           </nav>
         </div>
