--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,7 @@
-<%= @user.name %>, <%= @user.email %>
+<h1><%= @user.role %> Profile</h1>
+
+<p>
+Name:              <%= @user.name %><br>
+Email:             <%= @user.email %><br>
+Prefered Language: <%= @user.language %>
+</p>
