Add course model

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,8 @@
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home",     root_path %></li>
+          <li><%= link_to "Mentors", '#' %></li>
+          <li><%= link_to "Courses", '#' %></li>
 
           <% if signed_in? %>
             <li id="fat-menu" class="dropdown">
