add new, edit, index pages for courses

--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -5,8 +5,6 @@
   <div class="span6 offset3">
     <%= form_for(@course) do |c| %>
 
-      <%= render 'shared/error_messages' %>
-
       <%= c.label :name %>
       <%= c.text_field :name %>
 
@@ -16,7 +14,7 @@
       <%= c.label :fee, "Payment - Number in US$" %> 
       <%= c.text_field :fee %> 
 
-      <%= f.submit "Create new course", class: "btn btn-large btn-primary" %>
+      <%= c.submit "Create new course", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
 </div>
