--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
         <ul class="nav pull-right">
           <li><%= link_to "Home",     root_path %></li>
           <li><%= link_to "Mentors", '#' %></li>
-          <li><%= link_to "Courses", '#' %></li>
+          <li><%= link_to "Courses", courses_path %></li>
 
           <% if signed_in? %>
             <li id="fat-menu" class="dropdown">
