add all_mentors page, fix users_new bug

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home",     root_path %></li>
-          <li><%= link_to "Mentors", '#' %></li>
+          <li><%= link_to "Mentors", all_mentors_path %></li>
           <li><%= link_to "Courses", courses_path %></li>
 
           <% if signed_in? %>
