--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,5 +1,17 @@
 <h1>Listing Courses</h1>
 
+<table class="tableClass">
+<tr >
+<td class="row">Course 1</td>
+<td class="row">Course 2</td>
+<td class="row">Course 3</td>
+</tr>
+<tr>
+<td class="row">Course 4</td>
+<td class="row">Course 5</td>
+<td class="row">Course 6</td>
+</tr>
+</table> 
 <% @courses.each do |course| %>
 	<h2> <%= course.name %></h2>
 	<ul>
