--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -1,14 +1,30 @@
 <% provide(:title, 'Home') %>
-
+<div id="big_wrapper">
 <div class="center hero-unit">
 
-  <h1>Hello Folks!</h1>
+		<header id="top_header">
+			<h1>Background/company logo</h1>
+		</header>
 
-  <h2>
-   Let's build the great company together!
-  </h2>
-  <%= link_to "Join Us", signup_path, class: "btn btn-large btn-primary" %>
+		<section id="main_section">
+			<article>
+				<header>
+					<hgroup>
+						<iframe width="420" height="315" src="//www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+					</hgroup>
+				</header>
+				<footer>
+					
+				</footer>
+			</article>
+		</section>
+		<aside id="news">
+  			<%= link_to "Join Us", signup_path, class: "btn btn-large btn-primary" %>
+		</aside>
+		</div>
+
 
 <!-- Start BookFresh Embed code --><div id="booking_widget_container" style="width: 490;"><iframe src="https://www.bookfresh.com/index.html?view=booking_widget&id=ee41700be0a4e31ecf0fe3a913c7e0f7&" frameborder="0" name="BookFresh" width="490px" height="590px" id="booking_widget" border="0" style="border: none;" marginwidth="0" scrolling="no"></iframe><div><span style="font-size: 10px; color: #88888b; font-family: Lucida Grande, Lucida,sans-serif;">Powered by <a href="http://www.bookfresh.com/" target="_blank" style="color: #88888b; text-decoration: underline;">BookFresh</a></span></div></div><!-- End BookFresh Embed code -->
 
+</div>
 </div>
