require signed in when viewing users' profile page + fix some css bugs

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,9 @@
         <ul class="nav pull-right">
           <li><%= link_to "Home",     root_path %></li>
           <li><%= link_to "Mentors", all_mentors_path %></li>
-          <li><%= link_to "Mentees", all_mentees_path %></li>
+          <% if signed_in? && current_user.role == "Admin" %>
+            <li><%= link_to "Mentees", all_mentees_path %></li>
+          <% end %>
           <li><%= link_to "Courses", courses_path %></li>
 
           <% if signed_in? %>
